Theme change functionality added

--- a/post.html
+++ b/post.html
@@ -11,11 +11,15 @@
 	<link rel="stylesheet" type="text/css" href="./thirdparty/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="./thirdparty/fontawesome/css/all.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="./src/css/main.css" media="all" />
-	<link rel="stylesheet" type="text/css" href="./src/css/theme-default.css" media="all" />
-
+	
 	<!-- ./ -->
 
+	<!-- Title -->
+	
 	<title>Post : Blog Name</title>
+
+	<!-- ./ -->
+	
 </head>
 
 <body>
@@ -175,7 +179,7 @@
 
 	<script type="text/javascript" src="./thirdparty/jquery-3.6.0.min.js"></script>
 	<script type="text/javascript" src="./thirdparty/bootstrap.bundle.min.js"></script>
-	<script type="text/javascript" src="./src/main.js"></script>
+	<script type="text/javascript" src="./src/scripts/main.js"></script>
 
 	<!-- ./ -->
 
