Added copyright and license notices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 
 <head>
 
+<!--
+  ______________________________________________________________________________________________
+ | 																							    |
+ |  Copyright 2022 ag-sanjjeev																	|
+ |																								|
+ |  The source code is licensed under MIT-style License. 										|
+ |  The usage, permission and condition are applicable to this source code as per license. 		|
+ |  That can be found in LICENSE file or at https://opensource.org/licenses/MIT.				|
+ |______________________________________________________________________________________________|
+
+-->
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
